--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script src="numeral.min.js"></script>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANvz9ENaOKJsSSqnkRB1JUbvcWL_BYUuI"></script>
 
